[package]
name = "subtensor"
version = "0.1.0"
description = "Implementation of the bittensor blockchain"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2024"
license = "Unlicense"
publish = false
repository = "https://github.com/opentensor/subtensor"

[build-dependencies]
subtensor-linting = { path = "support/linting", version = "0.1.0" }
syn = { workspace = true, features = [
	"full",
	"visit-mut",
	"visit",
	"extra-traits",
	"parsing",
] }
quote.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
walkdir.workspace = true
rayon = "1.10"

[workspace]
members = [
	"common",
	"node",
	"pallets/*",
	"precompiles",
	"primitives/*",
	"runtime",
	"support/*",
	"chain-extensions",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
arithmetic-side-effects = "deny"
expect-used = "deny"
indexing-slicing = "deny"
manual_inspect = "allow"
result_large_err = "allow"
type_complexity = "allow"
unwrap-used = "deny"
useless_conversion = "allow"     # until polkadot is patched

[workspace.dependencies]
node-subtensor-runtime = { path = "runtime", default-features = false }
pallet-admin-utils = { path = "pallets/admin-utils", default-features = false }
pallet-commitments = { path = "pallets/commitments", default-features = false }
pallet-registry = { path = "pallets/registry", default-features = false }
pallet-crowdloan = { path = "pallets/crowdloan", default-features = false }
pallet-subtensor = { path = "pallets/subtensor", default-features = false }
pallet-subtensor-swap = { path = "pallets/swap", default-features = false }
pallet-subtensor-swap-runtime-api = { path = "pallets/swap/runtime-api", default-features = false }
pallet-subtensor-swap-rpc = { path = "pallets/swap/rpc", default-features = false }
procedural-fork = { path = "support/procedural-fork", default-features = false }
safe-math = { path = "primitives/safe-math", default-features = false }
share-pool = { path = "primitives/share-pool", default-features = false }
subtensor-macros = { path = "support/macros", default-features = false }
subtensor-custom-rpc = { default-features = false, path = "pallets/subtensor/rpc" }
subtensor-custom-rpc-runtime-api = { default-features = false, path = "pallets/subtensor/runtime-api" }
subtensor-precompiles = { default-features = false, path = "precompiles" }
subtensor-runtime-common = { default-features = false, path = "common" }
subtensor-swap-interface = { default-features = false, path = "pallets/swap-interface" }
subtensor-transaction-fee = { default-features = false, path = "pallets/transaction-fee" }
subtensor-chain-extensions = { default-features = false, path = "chain-extensions" }

ed25519-dalek = { version = "2.1.0", default-features = false }
async-trait = "0.1"
cargo-husky = { version = "1", default-features = false }
clap = "4.5.4"
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
enumflags2 = "0.7.9"
futures = "0.3.30"
hex = { version = "0.4", default-features = false }
hex-literal = "0.4.1"
jsonrpsee = { version = "0.24.9", default-features = false }
libsecp256k1 = { version = "0.7.2", default-features = false }
log = { version = "0.4.21", default-features = false }
memmap2 = "0.9.8"
ndarray = { version = "0.16.1", default-features = false }
rand = "0.8.5"
scale-info = { version = "2.11.2", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde-tuple-vec-map = { version = "1.0.1", default-features = false }
serde_bytes = { version = "0.11.14", default-features = false }
serde_json = { version = "1.0.141", default-features = false }
serde_with = { version = "3.14.0", default-features = false }
smallvec = "1.13.2"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "=0.3.18" }
litep2p = { git = "https://github.com/paritytech/litep2p", tag = "v0.7.0", default-features = false }
syn = { version = "2.0.106", default-features = false }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
walkdir = "2"
approx = "0.5"
alloy-primitives = { version = "0.8.23", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
semver = "1.0"
toml_edit = "0.22"
derive-syn-parse = "0.2"
Inflector = "0.11"
cfg-expr = "0.15"
itertools = "0.10"
macro_magic = { version = "0.5", default-features = false }
frame-support-procedural-tools = { version = "10.0.0", default-features = false }
proc-macro-warning = { version = "1", default-features = false }
expander = "2"
ahash = { version = "0.8", default-features = false }
regex = { version = "1.11.1", default-features = false }
ethereum = { version = "0.18.2", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
tokio = { version = "1.38", default-features = false }

frame = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame", default-features = false, package = "polkadot-sdk-frame" }
frame-benchmarking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/benchmarking", default-features = false }
frame-benchmarking-cli = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/frame/benchmarking-cli", default-features = false }
frame-executive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/executive", default-features = false }
frame-metadata-hash-extension = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/metadata-hash-extension", default-features = false }
frame-support = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/support", default-features = false }
frame-system = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/system", default-features = false }
frame-system-benchmarking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/system/benchmarking", default-features = false }
frame-system-rpc-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/try-runtime", default-features = false }
frame-metadata = { version = "23.0.0", default-features = false }

pallet-subtensor-proxy = { path = "pallets/proxy", default-features = false }
pallet-subtensor-utility = { path = "pallets/utility", default-features = false }
pallet-babe = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/babe", default-features = false }
pallet-aura = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/aura", default-features = false }
pallet-balances = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/balances", default-features = false }
pallet-grandpa = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/grandpa", default-features = false }
pallet-insecure-randomness-collective-flip = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/insecure-randomness-collective-flip", default-features = false }
pallet-multisig = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/multisig", default-features = false }
pallet-preimage = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/preimage", default-features = false }
pallet-safe-mode = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/safe-mode", default-features = false }
pallet-scheduler = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/scheduler", default-features = false }
pallet-sudo = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/transaction-payment/rpc", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
pallet-root-testing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/root-testing", default-features = false }
pallet-contracts = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/contracts", default-features = false }

# NPoS
frame-election-provider-support = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/election-provider-support", default-features = false }
pallet-authority-discovery = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/authority-discovery", default-features = false }
pallet-authorship = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/authorship", default-features = false }
pallet-bags-list = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/bags-list", default-features = false }
pallet-election-provider-multi-phase = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/election-provider-multi-phase", default-features = false }
pallet-fast-unstake = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/fast-unstake", default-features = false }
pallet-nomination-pools = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/nomination-pools", default-features = false }
pallet-nomination-pools-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/nomination-pools/runtime-api", default-features = false }
pallet-session = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/session", default-features = false }
pallet-staking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking", default-features = false }
pallet-staking-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking/runtime-api", default-features = false }
pallet-staking-reward-fn = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking/reward-fn", default-features = false }
pallet-staking-reward-curve = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking/reward-curve", default-features = false }
pallet-offences = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/offences", default-features = false }

sc-basic-authorship = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/basic-authorship", default-features = false }
sc-cli = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/cli", default-features = false }
sc-client-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/api", default-features = false }
sc-consensus = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/common", default-features = false }
sc-consensus-aura = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/aura", default-features = false }
sc-consensus-babe = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/babe", default-features = false }
sc-consensus-babe-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/babe/rpc", default-features = false }
sc-consensus-grandpa = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/grandpa", default-features = false }
sc-consensus-grandpa-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/grandpa/rpc", default-features = false }
sc-consensus-epochs = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/epochs", default-features = false }
sc-chain-spec-derive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/chain-spec/derive", default-features = false }
sc-chain-spec = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/chain-spec", default-features = false }
sc-consensus-slots = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/slots", default-features = false }
sc-executor = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/executor", default-features = false }
sc-keystore = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/keystore", default-features = false }
sc-network = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network", default-features = false }
sc-offchain = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/offchain", default-features = false }
sc-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/rpc", default-features = false }
sc-rpc-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/rpc-api", default-features = false }
sc-service = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/service", default-features = false }
sc-telemetry = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/telemetry", default-features = false }
sc-transaction-pool = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/transaction-pool", default-features = false }
sc-transaction-pool-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/transaction-pool/api", default-features = false }
sc-consensus-manual-seal = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/manual-seal", default-features = false }
sc-network-sync = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network/sync", default-features = false }

sp-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/api", default-features = false }
sp-authority-discovery = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/authority-discovery", default-features = false }
sp-arithmetic = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/arithmetic", default-features = false }
sp-block-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/block-builder", default-features = false }
sp-blockchain = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/blockchain", default-features = false }
sp-staking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/staking", default-features = false }
sp-consensus = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/common", default-features = false }
sp-consensus-aura = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/aura", default-features = false }
sp-consensus-babe = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/babe", default-features = false }
sp-consensus-slots = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/slots", default-features = false }
sp-npos-elections = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/npos-elections", default-features = false }
sp-consensus-grandpa = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/grandpa", default-features = false }
sp-genesis-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/genesis-builder", default-features = false }
sp-core = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/core", default-features = false }
sp-inherents = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/inherents", default-features = false }
sp-io = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/io", default-features = false }
sp-keyring = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/keyring", default-features = false }
sp-offchain = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/offchain", default-features = false }
sp-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/rpc", default-features = false }
sp-runtime = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/runtime", default-features = false }
sp-session = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/session", default-features = false }
sp-std = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/std", default-features = false }
sp-storage = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/storage", default-features = false }
sp-timestamp = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/timestamp", default-features = false }
sp-tracing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/tracing", default-features = false }
sp-transaction-pool = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/version", default-features = false }
sp-weights = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/weights", default-features = false }
sp-crypto-hashing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/crypto/hashing", default-features = false }
sp-application-crypto = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/application-crypto", default-features = false }
sp-debug-derive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/debug-derive", default-features = false }

substrate-build-script-utils = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/build-script-utils", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed.git", tag = "v0.6.0", default-features = false }
substrate-frame-rpc-system = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/frame/rpc/system", default-features = false }
substrate-wasm-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/wasm-builder", default-features = false }
substrate-prometheus-endpoint = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/prometheus", default-features = false }

polkadot-sdk = { path = "/Users/loris/Work/polkadot-sdk-otf/umbrella", default-features = false }

runtime-common = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/runtime/common", default-features = false, package = "polkadot-runtime-common" }

# Frontier
fp-evm = { path = "/Users/loris/Work/frontier/primitives/evm", default-features = false }
fp-rpc = { path = "/Users/loris/Work/frontier/primitives/rpc", default-features = false }
fp-self-contained = { path = "/Users/loris/Work/frontier/primitives/self-contained", default-features = false }
fp-account = { path = "/Users/loris/Work/frontier/primitives/account", default-features = false }
fc-storage = { path = "/Users/loris/Work/frontier/client/storage", default-features = false }
fc-db = { path = "/Users/loris/Work/frontier/client/db", default-features = false }
fc-consensus = { path = "/Users/loris/Work/frontier/client/consensus", default-features = false }
fp-consensus = { path = "/Users/loris/Work/frontier/primitives/consensus", default-features = false }
fp-dynamic-fee = { path = "/Users/loris/Work/frontier/primitives/dynamic-fee", default-features = false }
fc-api = { path = "/Users/loris/Work/frontier/client/api", default-features = false }
fc-rpc = { path = "/Users/loris/Work/frontier/client/rpc", default-features = false }
fc-rpc-core = { path = "/Users/loris/Work/frontier/client/rpc-core", default-features = false }
fc-aura = { path = "/Users/loris/Work/frontier/client/aura", default-features = false }
fc-babe = { path = "/Users/loris/Work/frontier/client/babe", default-features = false }
fc-mapping-sync = { path = "/Users/loris/Work/frontier/client/mapping-sync", default-features = false }
precompile-utils = { path = "/Users/loris/Work/frontier/precompiles", default-features = false }

# Frontier FRAME
pallet-base-fee = { path = "/Users/loris/Work/frontier/frame/base-fee", default-features = false }
pallet-dynamic-fee = { path = "/Users/loris/Work/frontier/frame/dynamic-fee", default-features = false }
pallet-ethereum = { path = "/Users/loris/Work/frontier/frame/ethereum", default-features = false }
pallet-evm = { path = "/Users/loris/Work/frontier/frame/evm", default-features = false }
pallet-evm-precompile-dispatch = { path = "/Users/loris/Work/frontier/frame/evm/precompile/dispatch", default-features = false }
pallet-evm-chain-id = { path = "/Users/loris/Work/frontier/frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { path = "/Users/loris/Work/frontier/frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { path = "/Users/loris/Work/frontier/frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { path = "/Users/loris/Work/frontier/frame/evm/precompile/simple", default-features = false }
pallet-evm-precompile-bn128 = { path = "/Users/loris/Work/frontier/frame/evm/precompile/bn128", default-features = false }
pallet-hotfix-sufficients = { path = "/Users/loris/Work/frontier/frame/hotfix-sufficients", default-features = false }

#DRAND
pallet-drand = { path = "pallets/drand", default-features = false }
sp-crypto-ec-utils = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/crypto/ec-utils", default-features = false }
getrandom = { version = "0.2.15", default-features = false, features = [
	"custom",
] }
sp-keystore = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/keystore", default-features = false }
w3f-bls = { git = "https://github.com/opentensor/bls", branch = "fix-no-std", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-scale = { version = "0.0.11", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
anyhow = { version = "1.0.81", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
tle = { git = "https://github.com/ideal-lab5/timelock", rev = "5416406cfd32799e31e1795393d4916894de4468", default-features = false }

pallet-shield = { path = "pallets/shield", default-features = false }
pallet-shield-runtime-api = { path = "pallets/shield/runtime-api", default-features = false }
ml-kem = { version = "0.2.0", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
rand_core = "0.9.3"
blake2 = "0.10.6"

# Primitives

[profile.release]
panic = "unwind"

[profile.test]
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[features]
default = []
pow-faucet = []

[patch.crates-io]
w3f-bls = { git = "https://github.com/opentensor/bls", branch = "fix-no-std" }

# Patches automatically generated with `diener`:
# `diener patch --target https://github.com/paritytech/polkadot-sdk --point-to-git https://github.com/opentensor/polkadot-sdk.git --point-to-git-commit 81fa2c54e94f824eba7dabe9dffd063481cb2d80 --crates-to-patch ../polkadot-sdk --ignore-unused`
#
# Using latest commit from `polkadot-stable2506-2-otf-patches`.
#
# View code changes here:
# <https://github.com/paritytech/polkadot-sdk/compare/polkadot-stable2506-2...opentensor:polkadot-sdk:polkadot-stable2506-2-otf-patches>
#
# NOTE: The Diener will patch unnecesarry crates while this is waiting to be merged: <https://github.com/paritytech/diener/pull/46>.
# You may install diener from `liamaharon:ignore-unused-flag` if you like in the meantime.
[patch."https://github.com/paritytech/polkadot-sdk"]
frame-support = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/support" }
binary-merkle-tree = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/binary-merkle-tree" }
sp-core = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/core" }
sp-crypto-hashing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/crypto/hashing" }
sp-crypto-hashing-proc-macro = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/crypto/hashing/proc-macro" }
sp-debug-derive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/externalities" }
sp-storage = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/runtime-interface/proc-macro" }
sp-std = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/std" }
sp-tracing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/io" }
sp-keystore = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/trie" }
sp-runtime = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/weights" }
sp-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/api/proc-macro" }
sp-metadata-ir = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/metadata-ir" }
sp-version = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/version" }
sp-version-proc-macro = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/version/proc-macro" }
sc-block-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/block-builder" }
sp-block-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/block-builder" }
sp-inherents = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/inherents" }
sp-blockchain = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/common" }
sp-database = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/database" }
sc-client-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/prometheus" }
sc-executor = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/executor" }
sc-executor-common = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/executor/common" }
sc-allocator = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/maybe-compressed-blob" }
sc-executor-polkavm = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/executor/polkavm" }
sc-executor-wasmtime = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/executor/wasmtime" }
substrate-wasm-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/wasm-builder" }
sc-tracing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/tracing/proc-macro" }
sp-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/rpc" }
frame-executive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/executive" }
frame-system = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/system" }
frame-try-runtime = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/try-runtime" }
pallet-balances = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/balances" }
frame-benchmarking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/benchmarking" }
frame-support-procedural = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/support/procedural/tools/derive" }
sc-client-db = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/db" }
sc-state-db = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/state-db" }
polkadot-sdk-frame = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame" }
frame-system-benchmarking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/system/benchmarking" }
frame-system-rpc-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/system/rpc/runtime-api" }
sp-consensus-aura = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/aura" }
sp-consensus-slots = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/slots" }
sp-timestamp = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/timestamp" }
sp-consensus-grandpa = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/grandpa" }
sp-genesis-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/genesis-builder" }
sp-keyring = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/keyring" }
sp-offchain = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/offchain" }
sp-session = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/session" }
sp-staking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/staking" }
sp-transaction-pool = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/transaction-pool" }
polkadot-sdk = { path = "/Users/loris/Work/polkadot-sdk-otf/umbrella" }
cumulus-primitives-core = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/primitives/core" }
polkadot-core-primitives = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/core-primitives" }
polkadot-parachain-primitives = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/parachain" }
polkadot-primitives = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/primitives" }
sp-authority-discovery = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/authority-discovery" }
staging-xcm = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/xcm" }
xcm-procedural = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/xcm/procedural" }
cumulus-primitives-parachain-inherent = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/primitives/parachain-inherent" }
cumulus-primitives-proof-size-hostfunction = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/primitives/proof-size-hostfunction" }
pallet-message-queue = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/message-queue" }
polkadot-runtime-parachains = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/runtime/parachains" }
pallet-authority-discovery = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/authority-discovery" }
pallet-session = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/session" }
pallet-timestamp = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/timestamp" }
pallet-authorship = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/authorship" }
pallet-babe = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/babe" }
sp-consensus-babe = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/consensus/babe" }
frame-election-provider-support = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/npos-elections" }
pallet-offences = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/offences" }
pallet-staking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking" }
pallet-bags-list = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/bags-list" }
pallet-staking-reward-curve = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking/reward-curve" }
pallet-broker = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/broker" }
pallet-mmr = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/merkle-mountain-range" }
polkadot-runtime-metrics = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/runtime/metrics" }
staging-xcm-executor = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/xcm/xcm-executor" }
sc-keystore = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/keystore" }
staging-xcm-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/xcm/xcm-builder" }
pallet-asset-conversion = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/asset-conversion" }
pallet-transaction-payment = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/transaction-payment" }
pallet-grandpa = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/grandpa" }
pallet-sudo = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/sudo" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-vesting = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/vesting" }
polkadot-runtime-common = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/runtime/common" }
pallet-asset-rate = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/asset-rate" }
pallet-election-provider-multi-phase = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/election-provider-support/benchmarking" }
pallet-fast-unstake = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/fast-unstake" }
pallet-identity = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/identity" }
pallet-staking-reward-fn = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking/reward-fn" }
pallet-treasury = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/treasury" }
pallet-utility = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/root-testing" }
slot-range-helper = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/runtime/common/slot_range_helper" }
cumulus-primitives-storage-weight-reclaim = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/primitives/storage-weight-reclaim" }
pallet-aura = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/aura" }
cumulus-test-relay-sproof-builder = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/test/relay-sproof-builder" }
sc-chain-spec = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network" }
sc-network-common = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network/common" }
sc-network-types = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network/types" }
sc-utils = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/utils" }
sc-telemetry = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/telemetry" }
sc-cli = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/cli" }
sc-mixnet = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/mixnet" }
sc-transaction-pool-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/transaction-pool/api" }
sp-mixnet = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/mixnet" }
sc-service = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/service" }
sc-consensus = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/common" }
sc-informant = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/informant" }
sc-network-sync = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network/sync" }
fork-tree = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/fork-tree" }
sc-network-light = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network/light" }
sc-network-transactions = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network/transactions" }
sc-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/rpc" }
sc-rpc-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/rpc-api" }
sp-statement-store = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/statement-store" }
sc-transaction-pool = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/transaction-pool" }
sc-rpc-server = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/sysinfo" }
sp-transaction-storage-proof = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/transaction-storage-proof" }
cumulus-relay-chain-interface = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/client/relay-chain-interface" }
polkadot-overseer = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/overseer" }
tracing-gum = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/gum" }
tracing-gum-proc-macro = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/gum/proc-macro" }
polkadot-node-metrics = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/metrics" }
polkadot-node-primitives = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/primitives" }
polkadot-node-subsystem-types = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/subsystem-types" }
polkadot-node-network-protocol = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/node/network/protocol" }
sc-authority-discovery = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/authority-discovery" }
polkadot-statement-table = { path = "/Users/loris/Work/polkadot-sdk-otf/polkadot/statement-table" }
frame-benchmarking-cli = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/frame/benchmarking-cli" }
cumulus-client-parachain-inherent = { path = "/Users/loris/Work/polkadot-sdk-otf/cumulus/client/parachain-inherent" }
sc-runtime-utilities = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/runtime-utilities" }
frame-metadata-hash-extension = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/metadata-hash-extension" }
pallet-nomination-pools = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/nomination-pools" }
pallet-membership = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/membership" }
pallet-multisig = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/multisig" }
pallet-nomination-pools-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/nomination-pools/runtime-api" }
pallet-preimage = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/preimage" }
pallet-proxy = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/proxy" }
pallet-scheduler = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/scheduler" }
pallet-staking-runtime-api = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/staking/runtime-api" }
sc-offchain = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/offchain" }
sc-consensus-babe = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/epochs" }
sc-consensus-slots = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/slots" }
pallet-transaction-payment-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/transaction-payment/rpc" }
sc-consensus-babe-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/babe/rpc" }
sc-network-gossip = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/network-gossip" }
sc-consensus-grandpa = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/grandpa" }
sc-consensus-grandpa-rpc = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/grandpa/rpc" }
substrate-frame-rpc-system = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/frame/rpc/system" }
sc-basic-authorship = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/proposer-metrics" }
substrate-build-script-utils = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/build-script-utils" }
sc-consensus-aura = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/aura" }
pallet-insecure-randomness-collective-flip = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/insecure-randomness-collective-flip" }
pallet-safe-mode = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/frame/safe-mode" }
sc-consensus-manual-seal = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/client/consensus/manual-seal" }
sp-crypto-ec-utils = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/primitives/crypto/ec-utils" }
substrate-bip39 = { path = "/Users/loris/Work/polkadot-sdk-otf/substrate/utils/substrate-bip39" }
